--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
         },
         {
             "tag": "#",
-            "color": "#FF2D00",
+            "color": "#52D9E8",
             "strikethrough": false
         },
         {
